# Projet-Agneau

./: .gitignore  CMakeLists.txt  Decter.pro  README.md  algocolors.cpp  algocolors.h  algosubstraction.cpp  algosubstraction.h  cascadestylesheetloader.cpp  cascadestylesheetloader.h  controller.h  doxygen.cfg  emptyfile.cpp  emptyfile.h  extractvideowindow.cpp  extractvideowindow.h  gestionvideo.cpp  gestionvideo.h  main.cpp  mainwindow.cpp  mainwindow.h  model.cpp  model.h  node.cpp  node.h  objecthisrogramwindow.cpp  objecthisrogramwindow.h  objectinformation.cpp  objectinformation.h  qdetectfilter.cpp  qdetectfilter.h  resources.qrc  shiftmaxwindow.cpp  shiftmaxwindow.h  sonar-project.properties  sound.cpp  sound.h  soundwave.h  thresholdvideowindow.h  trajectory.cpp  (+5 more)
.scannerwork/scanner-report/: measures-10.pb  measures-11.pb  measures-12.pb  measures-13.pb  measures-14.pb  measures-15.pb  measures-16.pb  measures-17.pb  measures-18.pb  measures-19.pb  measures-2.pb  measures-20.pb  measures-21.pb  measures-3.pb  measures-4.pb  measures-5.pb  measures-6.pb  measures-7.pb  measures-8.pb  measures-9.pb  syntax-highlightings-10.pb  syntax-highlightings-11.pb  syntax-highlightings-12.pb  syntax-highlightings-13.pb  syntax-highlightings-14.pb  syntax-highlightings-15.pb  syntax-highlightings-16.pb  syntax-highlightings-17.pb  syntax-highlightings-18.pb  syntax-highlightings-19.pb  syntax-highlightings-2.pb  syntax-highlightings-20.pb  syntax-highlightings-21.pb  syntax-highlightings-3.pb  syntax-highlightings-4.pb  syntax-highlightings-5.pb  syntax-highlightings-6.pb  syntax-highlightings-7.pb  syntax-highlightings-8.pb  syntax-highlightings-9.pb
cmake/: FindFFmpeg.cmake
controller/: controller.cpp  controller.h
model/: algosubstraction.cpp  objectinformation.cpp  objectinformation.h  sound.cpp  sound.h  soundwave.cpp  soundwave.h  trajectory.cpp  video.cpp  video.h
ressources/: properties.txt  style.css
view/: cascadestylesheetloader.h  extractvideowindow.h  mainwindow.h  objecthistogramwindow.cpp  objecthistogramwindow.h  shiftmaxwindow.h  thresholdvideowindow.cpp  thresholdvideowindow.h  view.h
